src/generated/ParCerber.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParCerber
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsCerber
import LexCerber

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&&' { PT _ (TS _ 4) }
  '(' { PT _ (TS _ 5) }
  ')' { PT _ (TS _ 6) }
  '*' { PT _ (TS _ 7) }
  '+' { PT _ (TS _ 8) }
  ',' { PT _ (TS _ 9) }
  '-' { PT _ (TS _ 10) }
  '/' { PT _ (TS _ 11) }
  ':' { PT _ (TS _ 12) }
  ':=' { PT _ (TS _ 13) }
  ';' { PT _ (TS _ 14) }
  '<' { PT _ (TS _ 15) }
  '<=' { PT _ (TS _ 16) }
  '=' { PT _ (TS _ 17) }
  '==' { PT _ (TS _ 18) }
  '>' { PT _ (TS _ 19) }
  '>=' { PT _ (TS _ 20) }
  '[' { PT _ (TS _ 21) }
  '[~' { PT _ (TS _ 22) }
  ']' { PT _ (TS _ 23) }
  ']~' { PT _ (TS _ 24) }
  'boolean' { PT _ (TS _ 25) }
  'break' { PT _ (TS _ 26) }
  'continue' { PT _ (TS _ 27) }
  'else' { PT _ (TS _ 28) }
  'false' { PT _ (TS _ 29) }
  'for' { PT _ (TS _ 30) }
  'function' { PT _ (TS _ 31) }
  'generator' { PT _ (TS _ 32) }
  'if' { PT _ (TS _ 33) }
  'in' { PT _ (TS _ 34) }
  'int' { PT _ (TS _ 35) }
  'ref' { PT _ (TS _ 36) }
  'return' { PT _ (TS _ 37) }
  'string' { PT _ (TS _ 38) }
  'true' { PT _ (TS _ 39) }
  'tuple' { PT _ (TS _ 40) }
  'void' { PT _ (TS _ 41) }
  'while' { PT _ (TS _ 42) }
  'yield' { PT _ (TS _ 43) }
  '{' { PT _ (TS _ 44) }
  '||' { PT _ (TS _ 45) }
  '}' { PT _ (TS _ 46) }
  '~>' { PT _ (TS _ 47) }
  '~[' { PT _ (TS _ 48) }
  '~]' { PT _ (TS _ 49) }
  L_Ident  { PT _ (TV _) }
  L_integ  { PT _ (TI _) }
  L_quoted { PT _ (TL _) }

%%

Ident :: { (AbsCerber.BNFC'Position, AbsCerber.Ident) }
Ident  : L_Ident { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Ident (tokenText $1)) }

Integer :: { (AbsCerber.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (AbsCerber.BNFC'Position, String) }
String   : L_quoted { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (AbsCerber.BNFC'Position, AbsCerber.Program) }
Program : ListTopDef { (fst $1, AbsCerber.PProgram (fst $1) (snd $1)) }

TopDef :: { (AbsCerber.BNFC'Position, AbsCerber.TopDef) }
TopDef : Type Ident '(' ListArg ')' Block { (fst $1, AbsCerber.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (AbsCerber.BNFC'Position, [AbsCerber.TopDef]) }
ListTopDef : TopDef { (fst $1, (:[]) (snd $1)) }
           | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg1 :: { (AbsCerber.BNFC'Position, AbsCerber.Arg) }
Arg1 : Type Ident { (fst $1, AbsCerber.VarArg (fst $1) (snd $1) (snd $2)) }
     | Arg2 { (fst $1, (snd $1)) }

Arg2 :: { (AbsCerber.BNFC'Position, AbsCerber.Arg) }
Arg2 : Type 'ref' Ident { (fst $1, AbsCerber.RefArg (fst $1) (snd $1) (snd $3)) }
     | '(' Arg ')' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), (snd $2)) }

Arg :: { (AbsCerber.BNFC'Position, AbsCerber.Arg) }
Arg : Arg1 { (fst $1, (snd $1)) }

ListArg :: { (AbsCerber.BNFC'Position, [AbsCerber.Arg]) }
ListArg : {- empty -} { (AbsCerber.BNFC'NoPosition, []) }
        | Arg { (fst $1, (:[]) (snd $1)) }
        | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (AbsCerber.BNFC'Position, AbsCerber.Block) }
Block : '{' ListStmt '}' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.BBlock (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (AbsCerber.BNFC'Position, [AbsCerber.Stmt]) }
ListStmt : {- empty -} { (AbsCerber.BNFC'NoPosition, []) }
         | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (AbsCerber.BNFC'Position, AbsCerber.Stmt) }
Stmt : ';' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Empty (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | Block { (fst $1, AbsCerber.BStmt (fst $1) (snd $1)) }
     | Type ListItem ';' { (fst $1, AbsCerber.Decl (fst $1) (snd $1) (snd $2)) }
     | Ident '=' Expr ';' { (fst $1, AbsCerber.Ass (fst $1) (snd $1) (snd $3)) }
     | Expr7 ':=' Expr ';' { (fst $1, AbsCerber.MAss (fst $1) (snd $1) (snd $3)) }
     | 'return' Expr ';' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Ret (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2)) }
     | 'return' ';' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.VRet (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | 'yield' Expr ';' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.VYield (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2)) }
     | 'if' '(' Expr ')' Stmt { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Cond (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.CondElse (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
     | Expr ';' { (fst $1, AbsCerber.SExp (fst $1) (snd $1)) }
     | 'break' ';' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Break (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | 'continue' ';' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Continue (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | 'while' '(' Expr ')' Stmt { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.While (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
     | 'for' Ident 'in' Expr Stmt { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.ForIn (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4) (snd $5)) }

Item :: { (AbsCerber.BNFC'Position, AbsCerber.Item) }
Item : Ident { (fst $1, AbsCerber.NoInit (fst $1) (snd $1)) }
     | Ident '=' Expr { (fst $1, AbsCerber.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (AbsCerber.BNFC'Position, [AbsCerber.Item]) }
ListItem : Item { (fst $1, (:[]) (snd $1)) }
         | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (AbsCerber.BNFC'Position, AbsCerber.Type) }
Type : 'int' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Int (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | 'string' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Str (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | 'boolean' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Bool (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | 'void' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Void (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
     | 'generator' '<' Type '>' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Generator (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $3)) }
     | 'tuple' '<' ListType '>' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Tuple (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $3)) }
     | 'function' '<' ListType '>' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Function (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $3)) }

ListType :: { (AbsCerber.BNFC'Position, [AbsCerber.Type]) }
ListType : {- empty -} { (AbsCerber.BNFC'NoPosition, []) }
         | Type { (fst $1, (:[]) (snd $1)) }
         | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr6 : Ident { (fst $1, AbsCerber.EVar (fst $1) (snd $1)) }
      | Integer { (fst $1, AbsCerber.ELitInt (fst $1) (snd $1)) }
      | 'true' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.ELitTrue (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | 'false' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.ELitFalse (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | Expr6 '[~' ListExpr ']~' { (fst $1, AbsCerber.EApp (fst $1) (snd $1) (snd $3)) }
      | String { (fst $1, AbsCerber.EString (fst $1) (snd $1)) }
      | '[' ListArg ']' ':' Type '~>' Block { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.ELambda (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $5) (snd $7)) }
      | Expr7 { (fst $1, (snd $1)) }

Expr5 :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr5 : '-' Expr6 { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Neg (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2)) }
      | '!' Expr6 { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Not (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2)) }
      | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr4 : Expr4 MulOp Expr5 { (fst $1, AbsCerber.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr3 : Expr3 AddOp Expr4 { (fst $1, AbsCerber.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr2 : Expr2 RelOp Expr3 { (fst $1, AbsCerber.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr1 : Expr2 '&&' Expr1 { (fst $1, AbsCerber.EAnd (fst $1) (snd $1) (snd $3)) }
      | Expr2 { (fst $1, (snd $1)) }

Expr :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr : Expr1 '||' Expr { (fst $1, AbsCerber.EOr (fst $1) (snd $1) (snd $3)) }
     | Expr1 { (fst $1, (snd $1)) }

Expr7 :: { (AbsCerber.BNFC'Position, AbsCerber.Expr) }
Expr7 : '~[' ListExpr '~]' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.ETuple (uncurry AbsCerber.BNFC'Position (tokenLineCol $1)) (snd $2)) }
      | '(' Expr ')' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), (snd $2)) }

ListExpr :: { (AbsCerber.BNFC'Position, [AbsCerber.Expr]) }
ListExpr : {- empty -} { (AbsCerber.BNFC'NoPosition, []) }
         | Expr { (fst $1, (:[]) (snd $1)) }
         | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (AbsCerber.BNFC'Position, AbsCerber.AddOp) }
AddOp : '+' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Plus (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '-' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Minus (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (AbsCerber.BNFC'Position, AbsCerber.MulOp) }
MulOp : '*' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Times (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '/' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Div (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '%' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.Mod (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (AbsCerber.BNFC'Position, AbsCerber.RelOp) }
RelOp : '<' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.LTH (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '<=' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.LE (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '>' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.GTH (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '>=' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.GE (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '==' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.EQU (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
      | '!=' { (uncurry AbsCerber.BNFC'Position (tokenLineCol $1), AbsCerber.NE (uncurry AbsCerber.BNFC'Position (tokenLineCol $1))) }
{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err AbsCerber.Program
pProgram = fmap snd . pProgram_internal
}
