src/generated/ParCerber.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParCerber.y
-----------------------------------------------------------------------------

state 55 contains 1 shift/reduce conflicts.
state 126 contains 1 shift/reduce conflicts.
state 150 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg1 -> Type Ident                                 (8)
	Arg1 -> Arg2                                       (9)
	Arg2 -> Type 'ref' Ident                           (10)
	Arg2 -> '(' Arg ')'                                (11)
	Arg -> Arg1                                        (12)
	ListArg ->                                         (13)
	ListArg -> Arg                                     (14)
	ListArg -> Arg ',' ListArg                         (15)
	Block -> '{' ListStmt '}'                          (16)
	ListStmt ->                                        (17)
	ListStmt -> Stmt ListStmt                          (18)
	Stmt -> ';'                                        (19)
	Stmt -> Block                                      (20)
	Stmt -> Type ListItem ';'                          (21)
	Stmt -> Ident '=' Expr ';'                         (22)
	Stmt -> Expr7 ':=' Expr ';'                        (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'yield' Expr ';'                           (26)
	Stmt -> 'if' '(' Expr ')' Stmt                     (27)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (28)
	Stmt -> Expr ';'                                   (29)
	Stmt -> 'break' ';'                                (30)
	Stmt -> 'continue' ';'                             (31)
	Stmt -> 'while' '(' Expr ')' Stmt                  (32)
	Stmt -> 'for' Ident 'in' Expr Stmt                 (33)
	Item -> Ident                                      (34)
	Item -> Ident '=' Expr                             (35)
	ListItem -> Item                                   (36)
	ListItem -> Item ',' ListItem                      (37)
	Type -> 'int'                                      (38)
	Type -> 'string'                                   (39)
	Type -> 'boolean'                                  (40)
	Type -> 'void'                                     (41)
	Type -> 'generator' '<' Type '>'                   (42)
	Type -> 'tuple' '<' ListType '>'                   (43)
	Type -> 'function' '<' ListType '>'                (44)
	ListType ->                                        (45)
	ListType -> Type                                   (46)
	ListType -> Type ',' ListType                      (47)
	Expr6 -> Ident                                     (48)
	Expr6 -> Integer                                   (49)
	Expr6 -> 'true'                                    (50)
	Expr6 -> 'false'                                   (51)
	Expr6 -> Expr6 '[~' ListExpr ']~'                  (52)
	Expr6 -> String                                    (53)
	Expr6 -> '[' ListArg ']' ':' Type '~>' Block       (54)
	Expr6 -> Expr7                                     (55)
	Expr5 -> '-' Expr6                                 (56)
	Expr5 -> '!' Expr6                                 (57)
	Expr5 -> Expr6                                     (58)
	Expr4 -> Expr4 MulOp Expr5                         (59)
	Expr4 -> Expr5                                     (60)
	Expr3 -> Expr3 AddOp Expr4                         (61)
	Expr3 -> Expr4                                     (62)
	Expr2 -> Expr2 RelOp Expr3                         (63)
	Expr2 -> Expr3                                     (64)
	Expr1 -> Expr2 '&&' Expr1                          (65)
	Expr1 -> Expr2                                     (66)
	Expr -> Expr1 '||' Expr                            (67)
	Expr -> Expr1                                      (68)
	Expr7 -> '~[' ListExpr '~]'                        (69)
	Expr7 -> '(' Expr ')'                              (70)
	ListExpr ->                                        (71)
	ListExpr -> Expr                                   (72)
	ListExpr -> Expr ',' ListExpr                      (73)
	AddOp -> '+'                                       (74)
	AddOp -> '-'                                       (75)
	MulOp -> '*'                                       (76)
	MulOp -> '/'                                       (77)
	MulOp -> '%'                                       (78)
	RelOp -> '<'                                       (79)
	RelOp -> '<='                                      (80)
	RelOp -> '>'                                       (81)
	RelOp -> '>='                                      (82)
	RelOp -> '=='                                      (83)
	RelOp -> '!='                                      (84)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':'            { PT _ (TS _ 12) }
	':='           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'['            { PT _ (TS _ 21) }
	'[~'           { PT _ (TS _ 22) }
	']'            { PT _ (TS _ 23) }
	']~'           { PT _ (TS _ 24) }
	'boolean'      { PT _ (TS _ 25) }
	'break'        { PT _ (TS _ 26) }
	'continue'     { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'for'          { PT _ (TS _ 30) }
	'function'     { PT _ (TS _ 31) }
	'generator'    { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'in'           { PT _ (TS _ 34) }
	'int'          { PT _ (TS _ 35) }
	'ref'          { PT _ (TS _ 36) }
	'return'       { PT _ (TS _ 37) }
	'string'       { PT _ (TS _ 38) }
	'true'         { PT _ (TS _ 39) }
	'tuple'        { PT _ (TS _ 40) }
	'void'         { PT _ (TS _ 41) }
	'while'        { PT _ (TS _ 42) }
	'yield'        { PT _ (TS _ 43) }
	'{'            { PT _ (TS _ 44) }
	'||'           { PT _ (TS _ 45) }
	'}'            { PT _ (TS _ 46) }
	'~>'           { PT _ (TS _ 47) }
	'~['           { PT _ (TS _ 48) }
	'~]'           { PT _ (TS _ 49) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg1            rules 8, 9
	Arg2            rules 10, 11
	Arg             rule  12
	ListArg         rules 13, 14, 15
	Block           rule  16
	ListStmt        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33
	Item            rules 34, 35
	ListItem        rules 36, 37
	Type            rules 38, 39, 40, 41, 42, 43, 44
	ListType        rules 45, 46, 47
	Expr6           rules 48, 49, 50, 51, 52, 53, 54, 55
	Expr5           rules 56, 57, 58
	Expr4           rules 59, 60
	Expr3           rules 61, 62
	Expr2           rules 63, 64
	Expr1           rules 65, 66
	Expr            rules 67, 68
	Expr7           rules 69, 70
	ListExpr        rules 71, 72, 73
	AddOp           rules 74, 75
	MulOp           rules 76, 77, 78
	RelOp           rules 79, 80, 81, 82, 83, 84

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[~'           reduce using rule 1
	']'            reduce using rule 1
	']~'           reduce using rule 1
	'boolean'      reduce using rule 1
	'break'        reduce using rule 1
	'continue'     reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'function'     reduce using rule 1
	'generator'    reduce using rule 1
	'if'           reduce using rule 1
	'in'           reduce using rule 1
	'int'          reduce using rule 1
	'return'       reduce using rule 1
	'string'       reduce using rule 1
	'true'         reduce using rule 1
	'tuple'        reduce using rule 1
	'void'         reduce using rule 1
	'while'        reduce using rule 1
	'yield'        reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'~['           reduce using rule 1
	'~]'           reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 18
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 17

State 7

	Type -> 'boolean' .                                 (rule 40)

	','            reduce using rule 40
	'>'            reduce using rule 40
	'ref'          reduce using rule 40
	'~>'           reduce using rule 40
	L_Ident        reduce using rule 40


State 8

	Type -> 'function' . '<' ListType '>'               (rule 44)

	'<'            shift, and enter state 16


State 9

	Type -> 'generator' . '<' Type '>'                  (rule 42)

	'<'            shift, and enter state 15


State 10

	Type -> 'int' .                                     (rule 38)

	','            reduce using rule 38
	'>'            reduce using rule 38
	'ref'          reduce using rule 38
	'~>'           reduce using rule 38
	L_Ident        reduce using rule 38


State 11

	Type -> 'string' .                                  (rule 39)

	','            reduce using rule 39
	'>'            reduce using rule 39
	'ref'          reduce using rule 39
	'~>'           reduce using rule 39
	L_Ident        reduce using rule 39


State 12

	Type -> 'tuple' . '<' ListType '>'                  (rule 43)

	'<'            shift, and enter state 14


State 13

	Type -> 'void' .                                    (rule 41)

	','            reduce using rule 41
	'>'            reduce using rule 41
	'ref'          reduce using rule 41
	'~>'           reduce using rule 41
	L_Ident        reduce using rule 41


State 14

	Type -> 'tuple' '<' . ListType '>'                  (rule 43)

	'>'            reduce using rule 45
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 20
	ListType       goto state 23

State 15

	Type -> 'generator' '<' . Type '>'                  (rule 42)

	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 22

State 16

	Type -> 'function' '<' . ListType '>'               (rule 44)

	'>'            reduce using rule 45
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 20
	ListType       goto state 21

State 17

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 19


State 18

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 19

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	'('            shift, and enter state 33
	')'            reduce using rule 13
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Arg1           goto state 28
	Arg2           goto state 29
	Arg            goto state 30
	ListArg        goto state 31
	Type           goto state 32

State 20

	ListType -> Type .                                  (rule 46)
	ListType -> Type . ',' ListType                     (rule 47)

	','            shift, and enter state 27
	'>'            reduce using rule 46


State 21

	Type -> 'function' '<' ListType . '>'               (rule 44)

	'>'            shift, and enter state 26


State 22

	Type -> 'generator' '<' Type . '>'                  (rule 42)

	'>'            shift, and enter state 25


State 23

	Type -> 'tuple' '<' ListType . '>'                  (rule 43)

	'>'            shift, and enter state 24


State 24

	Type -> 'tuple' '<' ListType '>' .                  (rule 43)

	','            reduce using rule 43
	'>'            reduce using rule 43
	'ref'          reduce using rule 43
	'~>'           reduce using rule 43
	L_Ident        reduce using rule 43


State 25

	Type -> 'generator' '<' Type '>' .                  (rule 42)

	','            reduce using rule 42
	'>'            reduce using rule 42
	'ref'          reduce using rule 42
	'~>'           reduce using rule 42
	L_Ident        reduce using rule 42


State 26

	Type -> 'function' '<' ListType '>' .               (rule 44)

	','            reduce using rule 44
	'>'            reduce using rule 44
	'ref'          reduce using rule 44
	'~>'           reduce using rule 44
	L_Ident        reduce using rule 44


State 27

	ListType -> Type ',' . ListType                     (rule 47)

	'>'            reduce using rule 45
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Type           goto state 20
	ListType       goto state 39

State 28

	Arg -> Arg1 .                                       (rule 12)

	')'            reduce using rule 12
	','            reduce using rule 12
	']'            reduce using rule 12


State 29

	Arg1 -> Arg2 .                                      (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9
	']'            reduce using rule 9


State 30

	ListArg -> Arg .                                    (rule 14)
	ListArg -> Arg . ',' ListArg                        (rule 15)

	')'            reduce using rule 14
	','            shift, and enter state 38
	']'            reduce using rule 14


State 31

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 37


State 32

	Arg1 -> Type . Ident                                (rule 8)
	Arg2 -> Type . 'ref' Ident                          (rule 10)

	'ref'          shift, and enter state 36
	L_Ident        shift, and enter state 2

	Ident          goto state 35

State 33

	Arg2 -> '(' . Arg ')'                               (rule 11)

	'('            shift, and enter state 33
	'boolean'      shift, and enter state 7
	'function'     shift, and enter state 8
	'generator'    shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'tuple'        shift, and enter state 12
	'void'         shift, and enter state 13

	Arg1           goto state 28
	Arg2           goto state 29
	Arg            goto state 34
	Type           goto state 32

State 34
